this is new update

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
            <img src="img/team-img2.jpg" alt="">
            <h3>HR. Radhika sharma</h3>
            <h5>Prism Resume</h5>
-           <button><a href="link-attach/prism/index.html">click me</a></button>
+           <button><a href="link-attach/heilo/index.html">click me</a></button>
          </div>
 
          <div class="box2">
